--- a/possel/data/frontend/package.json
+++ b/possel/data/frontend/package.json
@@ -1,18 +1,20 @@
 {
-    "name": "frontend",
-    "version": "1.0.0",
-    "description": "",
-    "main": "main.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+ssh://git@bitbucket.org/anangusp/possel-pretty-dev.git"
-    },
-    "author": "",
-    "license": "ISC",
-    "homepage": "https://bitbucket.org/anangusp/possel-pretty-dev#readme",
-    "babel": {
-    }
+  "name": "frontend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@bitbucket.org/anangusp/possel-pretty-dev.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "homepage": "https://bitbucket.org/anangusp/possel-pretty-dev#readme",
+  "babel": {},
+  "dependencies": {
+    "babel": "^5.8.23"
+  }
 }
